--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
+    "csv-parse": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
