--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
     "csv-parse": "^5.6.0",
+    "csv-parser": "^3.2.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
