--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "worker": "NODE_ENV=production tsx workers/uploadWorker.ts",
-    "worker:win": "set NODE_ENV=production&& tsx workers/uploadWorker.ts",
-    "build:worker": "tsc --project tsconfig.worker.json",
-    "start:worker": "NODE_ENV=production node dist/workers/uploadWorker.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@aws-sdk/client-lambda": "^3.810.0",
+    "@aws-sdk/client-s3": "^3.810.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
     "autoprefixer": "^10.4.16",
